--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="./assets/style.css">
   <title>Frontend Mentor | Intro main with dropdown navigation</title>
 
   <style>
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-md">
       <div class="mt-1">
         <a class="navbar-brand" href="#">
-          <img src="assets/images/logo.svg" alt="snap logo" class="">
+          <img src="./assets/images/logo.svg" alt="snap logo" class="">
         </a>
       </div>
       <!-- toggle button for mobile nav -->
@@ -88,10 +88,10 @@
           <a href="#" class="btn btn-dark btn-outline-light px-3 py-2 round-border align-self-start fw-bold">Learn
             more</a>
           <div class="">
-            <img class="me-3" src="/assets/images/client-databiz.svg" alt="databiz-clinet">
-            <img class="me-3" src="/assets/images/client-audiophile.svg" alt="audiophile-client">
-            <img class="me-3" src="/assets/images/client-meet.svg" alt="meet-client">
-            <img src="/assets/images/client-maker.svg" alt="client-maker">
+            <img class="me-3" src="./assets/images/client-databiz.svg" alt="databiz-clinet">
+            <img class="me-3" src="./assets/images/client-audiophile.svg" alt="audiophile-client">
+            <img class="me-3" src="./assets/images/client-meet.svg" alt="meet-client">
+            <img src="./assets/images/client-maker.svg" alt="client-maker">
           </div>
           <!-- <ul class="client-list my-4">
             <li class="client-list-item"><img src="/assets/images/client-databiz.svg" alt="databiz-clinet"></li>
@@ -102,7 +102,7 @@
 
         </div>
         <div class="col-lg-5 ms-5">
-          <img src="/assets/images/image-hero-desktop.png" alt="img-hero" class="img-fluid">
+          <img src="./assets/images/image-hero-desktop.png" alt="img-hero" class="img-fluid">
         </div>
       </section>
     </main>
