--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </header>
 
   <body>
-    <main class="container mb-5">
+    <main class="container mb-3">
       <section class="row mx-auto mt-5" style="width: 90%; height: 80%;">
         <div class="col-lg-6 d-flex flex-column justify-content-between">
           <h2 class="title fw-bold mt-5">Make remote work
@@ -107,16 +107,15 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="attribution my-3">
 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Sara</a>.
     </footer>
   </body>
 
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
